# ai-ui

./: .gitignore  .gitmodules  GEMINI.md  README.md  apis.md  components.md  index.html  mcp_config.json  mcp_server.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py  logging.py
app/models/: ui_protocol.py
app/routers/: api.py
app/services/: auth.py  llm.py  mcp_manager.py
static/: index.html
webui/: package-lock.json  package.json
webui/src/: App.vue  main.js  style.css
webui/src/components/: ChatSidebar.vue  ChatWindow.vue  DynamicForm.vue
webui/src/router/: index.js
webui/src/services/: api.js
webui/src/views/: ChatLayout.vue  Login.vue
