[project]
name = "ai-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "mcp>=1.26.0",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tomli>=2.4.0",
    "uvicorn>=0.40.0",
]
